--- a/index.html
+++ b/index.html
@@ -38,14 +38,21 @@
               <div class="carousel-item active">
                 <img
                   class="d-block w-100 rounded"
-                  src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:0/q:80/plain/https://dashboard.cellphones.com.vn/storage/buildpc-giam150k.png"
+                  src="img/banner100.png"
                   alt="First slide"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   class="d-block w-100 rounded"
-                  src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:0/q:80/plain/https://dashboard.cellphones.com.vn/storage/buildpc-giam250K.png"
+                  src="img/banner200.png"
+                  alt="Second slide"
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  class="d-block w-100 rounded"
+                  src="img/banner300.png"
                   alt="Second slide"
                 />
               </div>
@@ -85,14 +92,14 @@
               <div class="carousel-item active">
                 <img
                   class="d-block w-100 rounded"
-                  src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:0/q:80/plain/https://dashboard.cellphones.com.vn/storage/buildpc-giam250K.png"
+                  src="img/banner500.png"
                   alt="First slide"
                 />
               </div>
               <div class="carousel-item">
                 <img
                   class="d-block w-100 rounded"
-                  src="https://cdn2.cellphones.com.vn/insecure/rs:fill:595:0/q:80/plain/https://dashboard.cellphones.com.vn/storage/buildpc-30tr-giam-1tr.png"
+                  src="img/banner800.png"
                   alt="Second slide"
                 />
               </div>
@@ -354,7 +361,7 @@
       </div>
     </div>
     <div class="container bg-light p-3 mt-5 border-full rounded">
-      <h2>Vì sao nên BuildPC</h2>
+      <h2 class="text-center">Vì sao nên BuildPC</h2>
       <div class="card-body">
         <br class="card-text" />
         <p>
@@ -402,9 +409,9 @@
           src="https://khoavang.vn/resources/cache/600xx1/data/16Ngh/blog/NewFolder/pc-gaming-yugang-1653024178.webp"
           alt="Dàn PC Gaming"
         />
+        <h4>Build PC cần những gì?</h4>
 
         <div class="collapse text-justify" id="expandableContent">
-          <h4>Build PC cần những gì?</h4>
           <p>
             Trước khi tiến hành Build PC giá rẻ, bạn cần nắm được những linh
             kiện cần có trong một bộ PC. Hãy tham khảo ngay phần thông tin bên
