--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <body>
     <div class="container mb-5">
       <img
-        src="https://nguyencongpc.vn/media/banner/13_Sepdcaa911ad2c13b0144afb49cc1ecf5b6.webp"
-        class="d-block w-100"
+        src="img/bigbanner.png"
+        class="d-block w-100 rounded"
         alt="banner"
       />
     </div>
