--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     />
   </head>
   <body>
-    <div class="container mb-5">
+    <div class="container mb-3">
       <img
         src="img/bigbanner.png"
         class="d-block w-100 rounded"
         alt="banner"
       />
     </div>
-    <div class="container mb-5">
+    <div class="container mb-3">
       <div class="row">
         <div class="col-md-6">
           <div
@@ -49,7 +49,7 @@
                   alt="Second slide"
                 />
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item ">
                 <img
                   class="d-block w-100 rounded"
                   src="img/banner300.png"
@@ -85,7 +85,7 @@
         <div class="col-md-6">
           <div
             id="carouselExampleControls2"
-            class="carousel slide"
+            class="carousel slide moblie-mg"
             data-ride="carousel"
           >
             <div class="carousel-inner">
@@ -131,7 +131,7 @@
       </div>
     </div>
 
-    <div class="container mb-5" >
+    <div class="container mb-3" >
 
       <div class="row">
         <div class="col-md-10" >
@@ -509,7 +509,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -858,7 +858,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -1124,7 +1124,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -1324,7 +1324,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -1518,7 +1518,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -1700,7 +1700,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -1884,7 +1884,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -2046,7 +2046,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -2206,7 +2206,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -2395,7 +2395,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -2655,7 +2655,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -2816,7 +2816,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
@@ -2977,7 +2977,7 @@
             </button>
           </div>
           <div class="modal-body bg-light">
-            <div class="container-fluid mb-5">
+            <div class="container-fluid mb-3">
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
                   <nav class="navbar navbar-expand-lg navbar-dark">
