--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         alt="banner"
       />
     </div>
-    <div class="container mb-3">
+    <div class="container mb-5">
       <div class="row">
         <div class="col-md-6">
           <div
@@ -136,9 +136,9 @@
       <div class="row">
         <div class="col-md-10" >
           <div id="content" >
-            <h3 class="text-center">
+            <h1 class="text-center title-h1">
               XÂY DỰNG CẤU HÌNH PC THEO MONG MUỐN CỦA BẠN!
-            </h3>
+            </h1>
             <table
               class="table table-striped table-bordered" 
             >
@@ -314,7 +314,7 @@
 
             </table>
           
-          <div class="shadowed-div rounded" id="total-tam">
+          <div class="shadowed-div rounded mb-none" id="total-tam">
             <p class="text-center" style="margin-bottom: 0px">
               Tổng tiền tạm tính:
             </p>
