update cau hinh 2 vga ssd hdd

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#vga2"
+                          data-target="#vga"
                           id="buttonvga2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -502,7 +502,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#ssd2"
+                          data-target="#ssd"
                           id="buttonssd2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -518,7 +518,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#hdd2"
+                          data-target="#hdd"
                           id="buttonhdd2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -534,7 +534,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#psu2"
+                          data-target="#psu"
                           id="buttonpsu2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -550,7 +550,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#vo2"
+                          data-target="#vo"
                           id="buttonvo2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -566,7 +566,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#tannhiet2"
+                          data-target="#tannhiet"
                           id="buttontannhiet2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -585,7 +585,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#monitor2"
+                          data-target="#monitor"
                           id="buttonmonitor2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -604,7 +604,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#mouse2"
+                          data-target="#mouse"
                           id="buttonmouse2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -620,7 +620,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#keyboard2"
+                          data-target="#keyboard"
                           id="buttonkeyboard2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
@@ -638,7 +638,7 @@
                           type="button"
                           class="btn btn-warning float-right"
                           data-toggle="modal"
-                          data-target="#tai2"
+                          data-target="#tai"
                           id="buttontai2"
                         >
                           <i class="fa fa-plus-circle" aria-hidden="true"></i>
