done cau hinh 2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body >
     <div class="container mb-3">
       <img src="img/bigbanner.png" class="d-block w-100 rounded" alt="banner" />
     </div>
@@ -128,11 +128,11 @@
     </div>
     <div class="container">
     <ul class="nav nav-pills mb-3 " id="pills-tab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true" onclick="printMessage('cauhinh1')">Cấu hình 1</a>
+      <li class="nav-item il-b">
+        <a class="btn btn-outline-warning nav-link active mr-3" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true" onclick="printMessage('cauhinh1')"><i class="fa fa-cog" aria-hidden="true"></i> Cấu hình 1</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false" onclick="printMessage('cauhinh2')">Cấu hình 2</a>
+      <li class="nav-item il-b">
+        <a class="btn btn-outline-warning nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false" onclick="printMessage('cauhinh2')"><i class="fa fa-cog" aria-hidden="true"></i> Cấu hình 2</a>
       </li>
     </ul>
   </div>
@@ -152,7 +152,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#cpu"
                           id="buttoncpu"
@@ -169,7 +169,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#main"
                           id="buttonmain"
@@ -185,7 +185,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#ram"
                           id="buttonram"
@@ -201,7 +201,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#vga"
                           id="buttonvga"
@@ -217,7 +217,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#ssd"
                           id="buttonssd"
@@ -233,7 +233,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#hdd"
                           id="buttonhdd"
@@ -249,7 +249,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#psu"
                           id="buttonpsu"
@@ -265,7 +265,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#vo"
                           id="buttonvo"
@@ -281,7 +281,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#tannhiet"
                           id="buttontannhiet"
@@ -300,7 +300,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#monitor"
                           id="buttonmonitor"
@@ -319,7 +319,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#mouse"
                           id="buttonmouse"
@@ -335,7 +335,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#keyboard"
                           id="buttonkeyboard"
@@ -353,7 +353,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#tai"
                           id="buttontai"
@@ -424,7 +424,7 @@
         <div class="2">
           <div class="row">
             <div class="col-md-8">
-              <div id="content">
+              <div id="content2">
                 <h1 class="text-center title-h1">
                   XÂY DỰNG CẤU HÌNH PC THEO MONG MUỐN CỦA BẠN!
                 </h1>
@@ -435,7 +435,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#cpu"
                           id="buttoncpu2"
@@ -452,7 +452,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#main"
                           id="buttonmain2"
@@ -468,7 +468,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#ram"
                           id="buttonram2"
@@ -484,7 +484,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#vga"
                           id="buttonvga2"
@@ -500,7 +500,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#ssd"
                           id="buttonssd2"
@@ -516,7 +516,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#hdd"
                           id="buttonhdd2"
@@ -532,7 +532,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#psu"
                           id="buttonpsu2"
@@ -548,7 +548,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#vo"
                           id="buttonvo2"
@@ -564,7 +564,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#tannhiet"
                           id="buttontannhiet2"
@@ -583,7 +583,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#monitor"
                           id="buttonmonitor2"
@@ -602,7 +602,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#mouse"
                           id="buttonmouse2"
@@ -618,7 +618,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#keyboard"
                           id="buttonkeyboard2"
@@ -636,7 +636,7 @@
                       <td>
                         <button
                           type="button"
-                          class="btn btn-warning float-right"
+                          class="btn btn-warning float-right btn-sm "
                           data-toggle="modal"
                           data-target="#tai"
                           id="buttontai2"
@@ -660,7 +660,7 @@
                   <p class="text-center" style="margin-bottom: 0px">
                     Tổng tiền tạm tính:
                   </p>
-                  <p class="total-prdt" id="total-prdtl">0đ</p>
+                  <p class="total-prdt" id="total-prdtl2">0đ</p>
                 </div>
               </div>
             </div>
@@ -669,7 +669,7 @@
                 <p class="text-center" style="margin-bottom: 0px">
                   Tổng tiền tạm tính:
                 </p>
-                <p class="total-prdt" id="total-prdt">0đ</p>
+                <p class="total-prdt" id="total-prdt2">0đ</p>
               </div>
               <div class="d-flex justify-content-center mt-3">
                 <a href="" type="button" class="btn btn-warning w-100 mb-1">
@@ -685,7 +685,7 @@
                 <a 
                   type="button"
                   class="btn btn-success w-100 mb-1"
-                  onclick="exportToPDF()"
+                  onclick="exportToPDF2()"
                 >
                   <i class="fa fa-download" aria-hidden="true"></i> Tải cấu hình(PDF)
                 </a>
@@ -694,7 +694,7 @@
                 <a href=""
                   type="button"
                   class="btn btn-danger w-100"
-                  onclick="deleteAll()"
+                  onclick="deleteAll2()"
                 >
                   <i class="fa fa-trash" aria-hidden="true"></i> Xóa cấu hình
                 </a>
