--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
 
                           <p class="view float-right">(Lượt xem: 2023)</p>
@@ -1055,7 +1055,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1094,7 +1094,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1133,7 +1133,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1172,7 +1172,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1367,7 +1367,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1406,7 +1406,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1445,7 +1445,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1611,7 +1611,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1650,7 +1650,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1811,7 +1811,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1850,7 +1850,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -1997,7 +1997,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2036,7 +2036,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2183,7 +2183,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2222,7 +2222,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2348,7 +2348,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2387,7 +2387,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2513,7 +2513,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2552,7 +2552,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2704,7 +2704,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2743,7 +2743,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -2969,7 +2969,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -3008,7 +3008,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -3134,7 +3134,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -3173,7 +3173,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -3299,7 +3299,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -3338,7 +3338,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -3464,7 +3464,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
@@ -3503,7 +3503,7 @@
                           <br />
                           <a
                             href="https://khoavang.vn/cpu-intel-core-i5-13600k-p1970.html"
-                            >Xem chi tiết</a
+                           target="_blank"  >Xem chi tiết</a
                           >
                           <p class="view float-right">(Lượt xem: 2023)</p>
                           <div class="d-flex align-items-center">
